# ultramoji-4d

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/emoji-renderer/: Cargo.toml
crates/emoji-renderer/src/: cpu.rs  decode.rs  glyph.rs  gpu.rs  lib.rs  present_blit.wgsl  shader.wgsl  texture.rs
crates/emoji-web/: Cargo.toml  serve.py  slack-app-manifest.yaml
crates/emoji-web/perf/: README.md  package-lock.json  package.json  run.mjs  run.sh
crates/emoji-web/src/: composite.wgsl  egui_panel.rs  gallery.rs  lib.rs  pixel_backend.rs  terminal_renderer.rs
crates/emoji-web/static/: asset-manifest.json  index.html  slack-config.js  slack_hosted.js
crates/emoji-web/test/: slack_hosted.test.mjs
src/ui/emoji_preview/: common.rs  cpu.rs  gpu.rs  mod.rs  shader.wgsl
