[workspace]
members = [".", "crates/emoji-renderer", "crates/emoji-web"]
resolver = "3"

[package]
name = "ultramoji-4d"
version = "0.1.0"
edition = "2024"

[dependencies]
emoji-renderer = { path = "crates/emoji-renderer" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
contour = "0.13"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
pollster = "0.4"
ratatui = "0.30"
softbuffer = "0.4"
tracing = "0.1"
wgpu = "24"
winit = "0.30"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true
codegen-units = 1
