[package]
name = "emoji-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
contour = "0.13"
earcutr = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
anyhow = "1"
tracing = "0.1"
